# branchfy

./: .gitignore  Cargo.toml  README.md  config.json  install_branchfy.sh
src/: config.rs  main.rs  player.rs  watcher.rs
src/cli/: mod.rs
src/config/: mod.rs
src/daemon/: mod.rs
src/git/: mod.rs
src/player/: mod.rs
